--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import "
    ]
   },
   {
