Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('heart.csv')"
+    "df = pd.read_csv('heart.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -62,7 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = "
    ]
   },
   {
