Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,10 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = df.drop('target', axis=1)"
+    "X = df.drop('target', axis=1)\n",
+    "y = df['target']\n",
+    "\n",
+    "X_train, X_test, "
    ]
   },
   {
