--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "\n",
-    "X_train, X_test, "
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
