--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "\n",
-    "\n",
+    "for col in X.columns:\n",
+    "    \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
