Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "y = df['target']\n",
     "\n",
     "for col in X.columns:\n",
-    "    X[col] = \n",
+    "    X[col] = (X[col] - min(X[col])) / (max)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
