--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "y = df['target']\n",
     "\n",
     "for col in X.columns:\n",
-    "    X[col] = (X[col] - min(X[col])) / (max)\n",
+    "    X[col] = (X[col] - min(X[col])) / (max(X[col]) - min(X[col]))\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
