--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg = Linear"
+    "from sklearn.linear_model i"
    ]
   },
   {
