--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model i"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logreg = Log"
    ]
   },
   {
