Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "logreg = Log"
+    "logreg = LogisticRegression()"
    ]
   },
   {
