--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "logreg = LogisticRegression()"
+    "logreg = LogisticRegression(fit_intercept=False, )"
    ]
   },
   {
