--- a/index.ipynb
+++ b/index.ipynb
@@ -231,13 +231,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "logreg = LogisticRegression(fit_intercept=False, )"
+    "logreg = LogisticRegression( )"
    ]
   },
   {
