Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg = LogisticRegression( )"
+    "logreg = LogisticRegression(C=1)"
    ]
   },
   {
