Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg = LogisticRegression(C=1)"
+    "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='l')"
    ]
   },
   {
