Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='lbfgs')"
+    "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='lbfgs')\n",
+    "logreg.fit(X_train, y)"
    ]
   },
   {
