Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,12 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='lbfgs')\n",
-    "logreg.fit(X_train, y)"
+    "logreg.fit(X_train, y_train)"
    ]
   },
   {
