Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,6 +240,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='lbfgs')\n",
+    "logreg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -258,8 +268,7 @@
     }
    ],
    "source": [
-    "logreg = LogisticRegression(C=1e12, fit_intercept=False, solver='lbfgs')\n",
-    "logreg.fit(X_train, y_train)"
+    "y_hat_train = logreg.predict(X)"
    ]
   },
   {
