Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,8 @@
     }
    ],
    "source": [
-    "y_hat_train = logreg.predict(X)"
+    "y_hat_train = logreg.predict(X_train)\n",
+    "y_hat_test = logreg.predic"
    ]
   },
   {
