Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,26 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
-       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
-       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
-       "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_hat_train = logreg.predict(X_train)\n",
-    "y_hat_test = logreg.predic"
+    "y_hat_test = logreg.predict(X_test)"
    ]
   },
   {
