Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "def precision(y_hat, y):\n",
-    "    counts = {}"
+    "    counts = {'TP': 0, 'FP'}"
    ]
   },
   {
