Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
    "outputs": [],
    "source": [
     "def precision(y_hat, y):\n",
-    "    counts = {'TP': 0, 'FP'}"
+    "    counts = {'TP': 0, 'FP': 0}\n",
+    "    if y_hat == 1 and "
    ]
   },
   {
