--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,8 @@
    "source": [
     "def precision(y_hat, y):\n",
     "    counts = {'TP': 0, 'FP': 0}\n",
-    "    if y_hat == 1 and "
+    "    if y_hat == 1 and y == 1:\n",
+    "        counts['TP'] +"
    ]
   },
   {
