--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,9 @@
     "def precision(y_hat, y):\n",
     "    counts = {'TP': 0, 'FP': 0}\n",
     "    if y_hat == 1 and y == 1:\n",
-    "        counts['TP'] +"
+    "        counts['TP'] += 1\n",
+    "        \n",
+    "    "
    ]
   },
   {
