--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
     "def precision(y_hat, y):\n",
     "    counts = {'TP': 0, 'pred_pos': 0}\n",
     "    if y_hat == 1:\n",
-    "        \n",
+    "        counts['pred_pos'] += 1\n",
     "        counts['TP'] += 1\n",
     "        \n",
     "    "
