Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,6 +273,7 @@
    "source": [
     "def precision(y_hat, y):\n",
     "    counts = {'TP': 0, 'pred_pos': 0}\n",
+    "    for ind, val in enumerate\n",
     "    if y_hat == 1:\n",
     "        counts['pred_pos'] += 1\n",
     "        if y == 1:\n",
