--- a/index.ipynb
+++ b/index.ipynb
@@ -273,8 +273,8 @@
    "source": [
     "def precision(y_hat, y):\n",
     "    counts = {'TP': 0, 'pred_pos': 0}\n",
-    "    for ind, val in enumerate\n",
-    "    if y_hat == 1:\n",
+    "    for ind, val in enumerate(y_hat):\n",
+    "        if y_hat[ind] == 1:\n",
     "        counts['pred_pos'] += 1\n",
     "        if y == 1:\n",
     "            counts['TP'] += 1\n",
