--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
     "            counts['pred_pos'] += 1\n",
     "            if y[ind] == 1:\n",
     "                counts['TP'] += 1\n",
-    "    \n",
+    "    return counts['TP'] / counts\n",
     "        \n",
     "    "
    ]
