--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,9 +278,7 @@
     "            counts['pred_pos'] += 1\n",
     "            if y[ind] == 1:\n",
     "                counts['TP'] += 1\n",
-    "    return counts['TP'] / counts\n",
-    "        \n",
-    "    "
+    "    return counts['TP'] / counts['pred_pos']"
    ]
   },
   {
