--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,8 @@
     "def recall(y_hat, y):\n",
     "    counts = {'TP': 0, 'act_pos': 0}\n",
     "    for ind in enumerate(y_hat):\n",
-    "        if y_hat[ind] == 1:\n",
-    "            counts['pred_pos'] += 1\n",
+    "        if y[ind] == 1:\n",
+    "            counts['act_pos'] += 1\n",
     "            if y[ind] == 1:\n",
     "                counts['TP'] += 1\n",
     "    return counts['TP'] / counts['pred_pos']"
