Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,9 +299,9 @@
     "    for ind in enumerate(y_hat):\n",
     "        if y[ind] == 1:\n",
     "            counts['act_pos'] += 1\n",
-    "            if y[ind] == 1:\n",
+    "            if y_hat[ind] == 1:\n",
     "                counts['TP'] += 1\n",
-    "    return counts['TP'] / counts['pred_pos']"
+    "    return counts['TP'] / counts['act_pos']"
    ]
   },
   {
