--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,13 @@
    "outputs": [],
    "source": [
     "def accuracy(y_hat, y):\n",
-    "    #Your code here"
+    "    counts = {'TP': 0, 'pred_pos': 0}\n",
+    "    for ind in enumerate(y_hat):\n",
+    "        if y_hat[ind] == 1:\n",
+    "            counts['pred_pos'] += 1\n",
+    "            if y[ind] == 1:\n",
+    "                counts['TP'] += 1\n",
+    "    return counts['TP'] / counts['pred_pos']"
    ]
   },
   {
