--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "def accuracy(y_hat, y):\n",
-    "    counts = {'TP': 0, 'TN': 0, 'total'}\n",
+    "    counts = {'TP': 0, 'TN': 0, 'total_obs': len(y)}\n",
     "    for ind in enumerate(y_hat):\n",
     "        if y_hat[ind] == 1:\n",
     "            counts['pred_pos'] += 1\n",
