Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "def accuracy(y_hat, y):\n",
     "    counts = {'TP': 0, 'TN': 0, 'total_obs': len(y)}\n",
     "    for ind in enumerate(y_hat):\n",
-    "        if y_hat[ind] == 1:\n",
+    "        if y_hat[ind] == 1 and :\n",
     "            counts['pred_pos'] += 1\n",
     "            if y[ind] == 1:\n",
     "                counts['TP'] += 1\n",
