Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,8 +322,8 @@
     "    for ind in enumerate(y_hat):\n",
     "        if y_hat[ind] == 1 and y[ind] == 1:\n",
     "            counts['TP'] += 1\n",
-    "        elif y_hat[ind] == 0 and y[ind] =:\n",
-    "                counts['TP'] += 1\n",
+    "        elif y_hat[ind] == 0 and y[ind] == 0:\n",
+    "            counts['TN'] += 1\n",
     "    return counts['TP'] / counts['pred_pos']"
    ]
   },
