Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
     "            counts['TP'] += 1\n",
     "        elif y_hat[ind] == 0 and y[ind] == 0:\n",
     "            counts['TN'] += 1\n",
-    "    return counts['TP'] / counts['pred_pos']"
+    "    return (counts['TP'] / counts['pred_pos']"
    ]
   },
   {
