Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
     "            counts['TP'] += 1\n",
     "        elif y_hat[ind] == 0 and y[ind] == 0:\n",
     "            counts['TN'] += 1\n",
-    "    return (counts['TP'] + counts['TN']) / counts['total_pos']"
+    "    return (counts['TP'] + counts['TN']) / counts['total_obs']"
    ]
   },
   {
@@ -346,9 +346,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
