--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Train')"
+   ]
   },
   {
    "cell_type": "markdown",
