Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Train')"
+    "print('Train precision {}'.)"
    ]
   },
   {
