Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Train precision {}'.)"
+    "print('Train precision {}'.format(precision(y_hat_train)))"
    ]
   },
   {
