Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Train precision {}'.format(precision(y_hat_train)))"
+    "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n",
+    "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n"
    ]
   },
   {
