Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,8 @@
    "outputs": [],
    "source": [
     "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n",
-    "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n"
+    "print('Train recall {}'.format(recall(y_hat_train, y_train)))\n",
+    "print('Train precision {}'.format(precision(y_hat_train, y_train)))"
    ]
   },
   {
