Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,8 @@
    "source": [
     "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n",
     "print('Train recall {}'.format(recall(y_hat_train, y_train)))\n",
-    "print('Train precision {}'.format(precision(y_hat_train, y_train)))"
+    "print('Train accuracy {}'.format(accuracy(y_hat_train, y_train)))\n",
+    "\n"
    ]
   },
   {
