--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,10 @@
     "print('Train precision {}'.format(precision(y_hat_train, y_train)))\n",
     "print('Train recall {}'.format(recall(y_hat_train, y_train)))\n",
     "print('Train accuracy {}'.format(accuracy(y_hat_train, y_train)))\n",
-    "\n"
+    "\n",
+    "print('Test precision {}'.format(precision(y_hat_train, y_train)))\n",
+    "print('Test recall {}'.format(recall(y_hat_train, y_train)))\n",
+    "print('Trai accuracy {}'.format(accuracy(y_hat_train, y_train)))\n"
    ]
   },
   {
