Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -351,9 +351,9 @@
     "print('Train recall {}'.format(recall(y_hat_train, y_train)))\n",
     "print('Train accuracy {}'.format(accuracy(y_hat_train, y_train)))\n",
     "\n",
-    "print('Test precision {}'.format(precision(y_hat_train, y_train)))\n",
-    "print('Test recall {}'.format(recall(y_hat_train, y_train)))\n",
-    "print('Trai accuracy {}'.format(accuracy(y_hat_train, y_train)))\n"
+    "print('Test precision {}'.format(precision(y_hat_test, y_test)))\n",
+    "print('Test recall {}'.format(recall(y_hat_test, y_train)))\n",
+    "print('Test accuracy {}'.format(accuracy(y_hat_train, y_train)))\n"
    ]
   },
   {
