Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "def precision(y_hat, y):\n",
-    "    \n",
+    "    y_y_hat = zip(y, y_hat)\n",
     "    \n",
     "    counts = {'TP': 0, 'pred_pos': 0}\n",
     "    for ind in enumerate(y_hat):\n",
