--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    "source": [
     "def precision(y_hat, y):\n",
     "    y_y_hat = zip(y, y_hat)\n",
-    "    tp = \n",
+    "    tp = sum([1 for i in ])\n",
     "    \n",
     "    counts = {'TP': 0, 'pred_pos': 0}\n",
     "    for ind in enumerate(y_hat):\n",
