Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,14 +274,7 @@
     "def precision(y_hat, y):\n",
     "    y_y_hat = zip(y, y_hat)\n",
     "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
-    "    prep_pos = sum([1 for i in y_y_hat if ])\n",
-    "    \n",
-    "    counts = {'TP': 0, 'pred_pos': 0}\n",
-    "    for ind in enumerate(y_hat):\n",
-    "        if y_hat[ind] == 1:\n",
-    "            counts['pred_pos'] += 1\n",
-    "            if y[ind] == 1:\n",
-    "                counts['TP'] += 1\n",
+    "    prep_pos = sum([1 for i in y_y_hat if i[1]==1])\n",
     "    return counts['TP'] / counts['pred_pos']"
    ]
   },
