Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,8 +274,8 @@
     "def precision(y_hat, y):\n",
     "    y_y_hat = zip(y, y_hat)\n",
     "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
-    "    prep_pos = sum([1 for i in y_y_hat if i[1]==1])\n",
-    "    return counts['TP'] / counts['pred_pos']"
+    "    pred_pos = sum([1 for i in y_y_hat if i[1]==1])\n",
+    "    return tp / pred_pos"
    ]
   },
   {
