Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "def precision(y_hat, y):\n",
-    "    y_y_hat = zip(y, y_hat)\n",
+    "    y_y_hat = list(zip(y, y_hat))\n",
     "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
     "    pred_pos = sum([1 for i in y_y_hat if i[1]==1])\n",
     "    return tp / float(pred_pos)"
