--- a/index.ipynb
+++ b/index.ipynb
@@ -292,6 +292,7 @@
    "outputs": [],
    "source": [
     "def recall(y_hat, y):\n",
+    "    y_y_hat = list(zip(y, ))\n",
     "    counts = {'TP': 0, 'act_pos': 0}\n",
     "    for ind in enumerate(y_hat):\n",
     "        if y[ind] == 1:\n",
