Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,14 +293,9 @@
    "source": [
     "def recall(y_hat, y):\n",
     "    y_y_hat = list(zip(y, y_hat))\n",
-    "    \n",
-    "    counts = {'TP': 0, 'act_pos': 0}\n",
-    "    for ind in enumerate(y_hat):\n",
-    "        if y[ind] == 1:\n",
-    "            counts['act_pos'] += 1\n",
-    "            if y_hat[ind] == 1:\n",
-    "                counts['TP'] += 1\n",
-    "    return counts['TP'] / counts['act_pos']"
+    "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
+    "    act_pos = sum([1 for i in y_y_hat if i[1]==1])\n",
+    "    return tp / float(pred_pos)"
    ]
   },
   {
