--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,11 @@
    "outputs": [],
    "source": [
     "def accuracy(y_hat, y):\n",
-    "    \n",
+    "    y_y_hat = list(zip(y, y_hat))\n",
+    "    tot_obs = len()\n",
+    "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
+    "    act_pos = sum([1 for i in y_y_hat if i[0]==1])\n",
+    "    return tp / float(act_pos)\n",
     "    counts = {'TP': 0, 'TN': 0, 'total_obs': len(y)}\n",
     "    for ind in enumerate(y_hat):\n",
     "        if y_hat[ind] == 1 and y[ind] == 1:\n",
