--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
     "    y_y_hat = list(zip(y, y_hat))\n",
     "    tot_obs = len(y)\n",
     "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
-    "    tn = sum([1 for i in y_y_hat if i[0]==1])\n",
+    "    tn = sum([1 for i in y_y_hat if i[0]==0 and i[1]==0])\n",
     "    return tp / float(act_pos)\n",
     "    counts = {'TP': 0, 'TN': 0, 'total_obs': len(y)}\n",
     "    for ind in enumerate(y_hat):\n",
