--- a/index.ipynb
+++ b/index.ipynb
@@ -316,14 +316,7 @@
     "    tot_obs = len(y)\n",
     "    tp = sum([1 for i in y_y_hat if i[0]==1 and i[1]==1])\n",
     "    tn = sum([1 for i in y_y_hat if i[0]==0 and i[1]==0])\n",
-    "    return tp / float(act_pos)\n",
-    "    counts = {'TP': 0, 'TN': 0, 'total_obs': len(y)}\n",
-    "    for ind in enumerate(y_hat):\n",
-    "        if y_hat[ind] == 1 and y[ind] == 1:\n",
-    "            counts['TP'] += 1\n",
-    "        elif y_hat[ind] == 0 and y[ind] == 0:\n",
-    "            counts['TN'] += 1\n",
-    "    return (counts['TP'] + counts['TN']) / counts['total_obs']"
+    "    return (tp + tn) / total_"
    ]
   },
   {
