--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
     "testing_Accuracy = []\n",
     "\n",
     "for i in range(10,95):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= None) #replace the \"None\" here\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= ) #replace the \"None\" here\n",
     "    logreg = LogisticRegression(fit_intercept = False, C = 1e12)\n",
     "    model_log = None\n",
     "    y_hat_test = None\n",
