--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
     "testing_Accuracy = []\n",
     "\n",
     "for i in range(10,95):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= ) #replace the \"None\" here\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= i/) #replace the \"None\" here\n",
     "    logreg = LogisticRegression(fit_intercept = False, C = 1e12)\n",
     "    model_log = None\n",
     "    y_hat_test = None\n",
