--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
     "\n",
     "for i in range(10,95):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=i/float(100)) #replace the \"None\" here\n",
-    "    logreg = LogisticRegression(fit_intercept=False, C = 1e12)\n",
+    "    logreg = LogisticRegression(fit_intercept=False, C=1e12, solver='lbfgs')\n",
     "    model_log = None\n",
     "    y_hat_test = None\n",
     "    y_hat_train = None\n",
