--- a/index.ipynb
+++ b/index.ipynb
@@ -402,8 +402,8 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=i/float(100)) #replace the \"None\" here\n",
     "    logreg = LogisticRegression(fit_intercept=False, C=1e12, solver='lbfgs')\n",
     "    model_log = logreg.fit(X_train, y_train)\n",
-    "    y_hat_test = model_og.pre\n",
-    "    y_hat_train = None\n",
+    "    y_hat_test = model_log.predict(X_test)\n",
+    "    y_hat_train = model_log.\n",
     "\n",
     "# 6 lines of code here"
    ]
