Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,7 +403,8 @@
     "    logreg = LogisticRegression(fit_intercept=False, C=1e12, solver='lbfgs')\n",
     "    model_log = logreg.fit(X_train, y_train)\n",
     "    y_hat_test = model_log.predict(X_test)\n",
-    "    y_hat_train = model_log.\n",
+    "    y_hat_train = model_log.predict(X_train)\n",
+    "    training_\n",
     "\n",
     "# 6 lines of code here"
    ]
