--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
     "    model_log = logreg.fit(X_train, y_train)\n",
     "    y_hat_test = model_log.predict(X_test)\n",
     "    y_hat_train = model_log.predict(X_train)\n",
-    "    training_\n",
+    "    training_Precision.append(precision())\n",
     "\n",
     "# 6 lines of code here"
    ]
