Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
     "    y_hat_test = model_log.predict(X_test)\n",
     "    y_hat_train = model_log.predict(X_train)\n",
     "    training_Precision.append(precision(y_hat_train, y_train))\n",
-    "    es\n",
+    "    testing_Precision.append(precision(y_ha))\n",
     "\n",
     "# 6 lines of code here"
    ]
