Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,8 +406,8 @@
     "    y_hat_train = model_log.predict(X_train)\n",
     "    training_Precision.append(precision(y_hat_train, y_train))\n",
     "    testing_Precision.append(precision(y_hat_test, y_test))\n",
-    "    training_Precision.append(precision(y_hat_train, y_train))\n",
-    "    testing_Precision.append(precision(y_hat_test, y_test))\n",
+    "    training_Recall.append(precision(y_hat_train, y_train))\n",
+    "    testing_Recall.append(precision(y_hat_test, y_test))\n",
     "\n",
     "# 6 lines of code here"
    ]
