--- a/index.ipynb
+++ b/index.ipynb
@@ -408,8 +408,8 @@
     "    testing_Precision.append(precision(y_hat_test, y_test))\n",
     "    training_Recall.append(recall(y_hat_train, y_train))\n",
     "    testing_Recall.append(recall(y_hat_test, y_test))\n",
-    "    training_Accuracy.append(precision(y_hat_train, y_train))\n",
-    "    testing_.append(precision(y_hat_test, y_test))"
+    "    training_Accuracy.append(accuracy(y_hat_train, y_train))\n",
+    "    testing_Accuracy.append(accuracy(y_hat_test, y_test))"
    ]
   },
   {
