--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for test and train precision"
+    "plt.sca"
    ]
   },
   {
