Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(training_Precision, )"
+    "plt.scatter(training_Precision, testing_Precision)\n",
+    "plt"
    ]
   },
   {
