Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "plt.scatter(training_Precision, testing_Precision)\n",
-    "plt"
+    "plt.title('Precision of Train and Test day')"
    ]
   },
   {
