--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,9 @@
    "outputs": [],
    "source": [
     "plt.scatter(training_Precision, testing_Precision)\n",
-    "plt.title('Precision of Train and Test day')"
+    "plt.title('Precision of Train and Test Data')\n",
+    "plt\n",
+    "plt.show()"
    ]
   },
   {
