--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,8 @@
    "source": [
     "plt.scatter(training_Precision, testing_Precision)\n",
     "plt.title('Precision of Train and Test Data')\n",
-    "plt\n",
+    "plt.xlabel('Training Precision')\n",
+    "plt.y\n",
     "plt.show()"
    ]
   },
