Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for test and train recall"
+    "plt.scatter(training_Recall, testing_Precision)\n",
+    "plt.title('Precision of Train and Test Data for Varying Split Sizes')\n",
+    "plt.xlabel('Training Precision')\n",
+    "plt.ylabel('Testing Precision')\n",
+    "plt.show()"
    ]
   },
   {
@@ -460,7 +464,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for test and train accuracy"
+    "plt.scatter(training_Precision, testing_Precision)\n",
+    "plt.title('Precision of Train and Test Data for Varying Split Sizes')\n",
+    "plt.xlabel('Training Precision')\n",
+    "plt.ylabel('Testing Precision')\n",
+    "plt.show()"
    ]
   },
   {
