Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,9 +451,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(training_Recall, testing_Precision)\n",
-    "plt.title('Precision of Train and Test Data for Varying Split Sizes')\n",
-    "plt.xlabel('Training Precision')\n",
+    "plt.scatter(training_Recall, testing_Recall)\n",
+    "plt.title('Recall of Train and Test Data for Varying Split Sizes')\n",
+    "plt.xlabel('Training Re')\n",
     "plt.ylabel('Testing Precision')\n",
     "plt.show()"
    ]
