--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(training_Precision, testing_Precision)\n",
+    "plt.scatter(training_Accuracy, testing_Precision)\n",
     "plt.title('Precision of Train and Test Data for Varying Split Sizes')\n",
     "plt.xlabel('Training Precision')\n",
     "plt.ylabel('Testing Precision')\n",
