Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,8 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(training_Accuracy, testing_Precision)\n",
-    "plt.title('Precision of Train and Test Data for Varying Split Sizes')\n",
+    "plt.scatter(training_Accuracy, testing_Accuracy)\n",
+    "plt.title('Accuracy of Train and Test Data for Varying Split Sizes')\n",
     "plt.xlabel('Training Precision')\n",
     "plt.ylabel('Testing Precision')\n",
     "plt.show()"
